--- a/src/main/webapp/WEB-INF/resources/css/carousel.css
+++ b/src/main/webapp/WEB-INF/resources/css/carousel.css
@@ -5,6 +5,7 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  background: whitesmoke;
 }
 
 
@@ -39,7 +40,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
+  height: 700px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -49,7 +50,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  height: 700px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -57,7 +58,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 700px;
 }
 
 
